--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "my-app",
+  "name": "floating-gorge-fend",
   "version": "0.1.0",
-  "engines": {
-    "node": "8.9.1",
-    "npm": "5.6.x"
-  },
+  "private": true,
   "dependencies": {
     "@fortawesome/fontawesome": "^1.1.4",
     "@fortawesome/react-fontawesome": "0.0.17",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "react-scripts": "1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,8 +15,4 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
-  "repository": {
-    "type": "git",
-    "url": "https://git.heroku.com/floating-gorge-fend.git"
-  },
 }
