--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@fortawesome/react-fontawesome": "0.0.17",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "axios": "0.18.0"
   },
   "scripts": {
     "start": "react-scripts start",
