--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/react-fontawesome": "0.0.17",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-router-dom": "4.2.2",  
     "react-scripts": "1.1.4",
     "axios": "0.18.0"
   },
